[package]
name = "md-color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
material-colors = {version = "0.2.1", features = ["image"]}
clap = {version = "4.5.3", features = ["derive"]}
tokio = { version = "1", features = ["full"] }